Furigana first post

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
   
     <title>About</title>
     <meta name="description" content="Metal Gear Solid Transcript in Japanese and English along with vocabulary extracted from the transcripts">
-    <link rel="canonical" href="jeromegrosse.github.io/scissors61/scissors61/about/">
+    <link rel="canonical" href="http://localhost:4000/scissors61/about/">
   
 
   <script>
