--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
   
     <title>The Hudson River, two years ago...</title>
     <meta name="description" content="Metal Gear Solid Transcript in Japanese and English along with vocabulary extracted from the transcripts">
-    <link rel="canonical" href="jeromegrosse.github.io/scissors61/scissors61/404.html">
+    <link rel="canonical" href="http://localhost:4000/scissors61/404.html">
   
 
   <script>
