Looks like the elevator in the back is the only way up

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
   
     <title>About</title>
     <meta name="description" content="Metal Gear Solid Transcript in Japanese and English along with vocabulary extracted from the transcripts">
-    <link rel="canonical" href="http://localhost:4000/scissors61/about/">
+    <link rel="canonical" href="https://jeromegrosse.github.io/scissors61/about/">
   
 
   <script>
@@ -177,7 +177,7 @@
     <footer id="footer" class="site-footer">
   <div class="copyright">
     
-      <p>&copy; 2017 The Hudson River, two years ago....</p>
+      <p>&copy; 2018 The Hudson River, two years ago....</p>
     
   </div>
 </footer>
